# ayaka_bot

./: .gitignore  .gitmodules  app.py  pyproject.toml  readme.md
ayaka/: __init__.py  ayaka.py  driver.py  logger.py  utils.py
ayaka/adapter/: __init__.py  _bot.py  _import.py  _logger.py  app.py  bot.py  import.py
ayaka/adapter/onebot/: __init__.py  bot.py  bot.pyi  event.py  message.py  utils.py
ayaka/onebot/v11/: __init__.py  bot.py  utils.py
ayaka_plugins/: wty_time.py
ayaka_plugins/example/: oclock.py
data/plugins/整点报时/: 1.txt  3.html  data.json
plugins/: bag.py  checkin.py  pray.py
plugins/talk/: talk.json
